--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -43,6 +43,7 @@
     <string name="select_end_date">Select End Date</string>
     <string name="due_date">Due Date</string>
     <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
     <string name="single_day">Single Day</string>
     <string name="date_range">Date Range</string>
     <string name="clear">Clear</string>
@@ -54,6 +55,7 @@
     <string name="friend_hint">Friend</string>
     <string name="note_hint">Note</string>
     <string name="select_due_date_title">Select Due Date</string>
+    <string name="add_transaction">Add Transaction</string>
 
     <!-- Account Screen -->
     <string name="income">Income</string>
@@ -125,5 +127,70 @@
     <string name="logout">Logout</string>
     <string name="logout_confirmation">Are you sure you want to logout?</string>
 
-</resources>
+    <!-- Empty States -->
+    <string name="no_transactions">No transactions yet</string>
+    <string name="no_transactions_hint">Press + to add a new transaction</string>
+    <string name="no_wallets">No wallets yet</string>
+    <string name="no_wallets_hint">Press + to add a new wallet</string>
+    <string name="no_friends">No friends yet</string>
+    <string name="no_friends_hint">Press Connect to add friends</string>
+    <string name="no_statistics">No statistics yet</string>
+    <string name="no_statistics_hint">Add transactions to see statistics</string>
 
+    <!-- Filter -->
+    <string name="all_wallets">All Wallets</string>
+    <string name="this_month">This Month</string>
+    <string name="this_year">This Year</string>
+    <string name="filter_time">Filter Time</string>
+    <string name="filter_wallet">Filter Wallet</string>
+    <string name="filter_transaction_type">Filter Transaction Type</string>
+    <string name="all_transactions">All</string>
+    <string name="income_only">Income Only</string>
+    <string name="expense_only">Expense Only</string>
+
+    <!-- Validation -->
+    <string name="required_field">This field is required</string>
+    <string name="invalid_email">Invalid email</string>
+    <string name="password_too_short">Password must be at least 6 characters</string>
+    <string name="amount_invalid">Invalid amount</string>
+
+    <!-- Sync -->
+    <string name="sync_now">Sync Now</string>
+    <string name="syncing">Syncing...</string>
+    <string name="sync_success">Sync successful</string>
+    <string name="sync_failed">Sync failed</string>
+
+    <!-- Language -->
+    <string name="system_language">System Language</string>
+
+    <!-- Transaction -->
+    <string name="delete_transaction">Delete Transaction</string>
+    <string name="confirm_delete_transaction">Are you sure you want to delete this transaction?</string>
+    <string name="edit_transaction">Edit Transaction</string>
+
+    <!-- Wallet -->
+    <string name="set_default_wallet">Set as default wallet</string>
+    <string name="default_wallet">Default Wallet</string>
+    <string name="wallet_type_cash">Cash</string>
+    <string name="wallet_type_bank">Bank</string>
+    <string name="wallet_type_ewallet">E-Wallet</string>
+    <string name="initial_balance">Initial Balance</string>
+    <string name="wallet_color">Wallet Color</string>
+
+    <!-- Home Screen Additional -->
+    <string name="user">User</string>
+    <string name="select_wallet">Select Wallet</string>
+    <string name="last_updated_at">Last updated at %1$s</string>
+    <string name="income_label">Income</string>
+    <string name="expense_label">Expense</string>
+
+    <!-- Weekdays -->
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+
+</resources>
